--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dependencies": {
         "@inertiajs/react": "^2.0.3",
         "bootstrap": "^5.3.3",
+        "moment": "^2.30.1",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-icons": "^5.4.0",
